Fixed scrollbar on Chrome.

--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,10 @@ form > input {
 .sidebar::-webkit-scrollbar {
   width: .4em;
 }
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
  
 .sidebar::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
